--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -23,7 +23,8 @@
     @Html.HiddenFor(m => m.VacancyReferenceNumber);
     @Html.HiddenFor(m => m.IsEmployerLocationMainApprenticeshipLocation)
     @Html.HiddenFor(m => m.CurrentPage)
-    @Html.HiddenFor(m => m.TotalNumberOfPages)
+    @Html.HiddenFor(m => m.LocationAddressesComment)
+    @Html.HiddenFor(m => m.AdditionalLocationInformationComment)
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     <noscript>
@@ -105,6 +106,7 @@
             @if (Model.Addresses != null && Model.Addresses.Any())
             {
                 <div class="form-group">
+                    <a name="locationaddresses"></a>
                     <div class="tabbed-element tab1 active width-all-1-1">
                         <table class="no-btm-margin grid-3-4">
                             <colgroup>
@@ -136,10 +138,10 @@
                                         @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine2, new {@id = "addresses_" + i + "address__AddressLine2", Name = "Addresses[" + i + "].Address.AddressLine2"})
                                         @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine3, new {@id = "addresses_" + i + "address__AddressLine3", Name = "Addresses[" + i + "].Address.AddressLine3"})
                                         @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine4, new {@id = "addresses_" + i + "address__AddressLine4", Name = "Addresses[" + i + "].Address.AddressLine4"})
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.Uprn, new { @id = "addresses_" + i + "address__Uprn", Name = "Addresses[" + i + "].Address.Uprn" })
+                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.Uprn, new {@id = "addresses_" + i + "address__Uprn", Name = "Addresses[" + i + "].Address.Uprn"})
                                     </td>
                                     <td>
-                                        @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new {@class="form-control-small", @maxlength = "5", @id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions"})
+                                        @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new {@class = "form-control-small", @maxlength = "5", @id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions"})
                                         @Html.ValidationMessage("Addresses[" + i + "].NumberOfPositions")
                                     </td>
                                     <td class="ta-center">
@@ -154,12 +156,12 @@
                         </table>
                     </div>
                 </div>
-            }
 
-            @if (Model.Addresses != null && Model.Addresses.Any())
-            {
+                @Html.DisplayFor(m => m.LocationAddressesComment, "Comment")
+
                 <div class="form-group">
                     @Html.FormTextAreaFor(m => m.AdditionalLocationInformation, controlHtmlAttributes: new {@class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;"}, labelHtmlAttributes: new {@class = "bold-small"})
+                    @Html.DisplayFor(m => m.AdditionalLocationInformationComment, "Comment")
                 </div>
                 <button type="submit" class="button" name="AddLocations" value="Locations">Save and continue</button>
             }
@@ -194,6 +196,7 @@
         </div>
         <div>
             <div data-bind="style: {'display': locationAddressesStatus() }">
+                <a name="locationaddresses"></a>
                 <table class="grid-3-4">
                     <colgroup>
                         <col class="t40">
@@ -203,43 +206,45 @@
                     </colgroup>
 
                     <thead>
-                        <tr>
-                            <th>
-                                <span class="heading-span">Location</span>
-                            </th>
-                            <th>
-                                <span class="heading-span">Number of positions</span>
-                            </th>
-                            <th>
-                            </th>
-                        </tr>
+                    <tr>
+                        <th>
+                            <span class="heading-span">Location</span>
+                        </th>
+                        <th>
+                            <span class="heading-span">Number of positions</span>
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
                     </thead>
                     <tbody id="location-addresses" data-bind="foreach: locationAddresses">
-                        <tr>
-                            <td>
-                                <span data-bind="html: itemFriendlyAddress()" maxlength="50" />
-                            </td>
-                            <td>
-                                <span style="width: 20%; display: inline-block"></span>
-                                <input class="form-control-small qual-input-edit qual-year" maxlength="5" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions'}">
-                                <span class="field-validation-valid" aria-live="polite" data-valmsg-replace="true" data-bind="attr:{'id': 'Addresses[' + $index() +'].NumberOfPositions_Error', 'data-valmsg-for': 'Addresses[' + $index() +'].NumberOfPositions'}"></span>
-                                <input type="hidden" data-bind="value: itemAddressLine1, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine1', 'id':'addresses_'+ $index() + 'address__AddressLine1' }">
-                                <input type="hidden" data-bind="value: itemAddressLine2, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine2', 'id':'addresses_'+ $index() + 'address__AddressLine2' }">
-                                <input type="hidden" data-bind="value: itemAddressLine3, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine3', 'id':'addresses_'+ $index() + 'address__AddressLine3' }">
-                                <input type="hidden" data-bind="value: itemAddressLine4, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine4', 'id':'addresses_'+ $index() + 'address__AddressLine4' }">
-                                <input type="hidden" data-bind="value: itemPostcode, attr:{'name':'Addresses[' + $index() +'].Address.Postcode', 'id':'addresses_'+ $index() + 'address__Postcode' }">
-                                <input type="hidden" data-bind="value: itemUprn, attr:{'name':'Addresses[' + $index() +'].Address.Uprn', 'id':'addresses_'+ $index() + 'address__Uprn' }">
-                            </td>
-                            <td class="ta-center">
-                                <a href="#" data-bind="click: $root.removeLocationAddress">remove location</a>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            <span data-bind="html: itemFriendlyAddress()" maxlength="50" />
+                        </td>
+                        <td>
+                            <span style="width: 20%; display: inline-block"></span>
+                            <input class="form-control-small qual-input-edit qual-year" maxlength="5" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions'}">
+                            <span class="field-validation-valid" aria-live="polite" data-valmsg-replace="true" data-bind="attr:{'id': 'Addresses[' + $index() +'].NumberOfPositions_Error', 'data-valmsg-for': 'Addresses[' + $index() +'].NumberOfPositions'}"></span>
+                            <input type="hidden" data-bind="value: itemAddressLine1, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine1', 'id':'addresses_'+ $index() + 'address__AddressLine1' }">
+                            <input type="hidden" data-bind="value: itemAddressLine2, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine2', 'id':'addresses_'+ $index() + 'address__AddressLine2' }">
+                            <input type="hidden" data-bind="value: itemAddressLine3, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine3', 'id':'addresses_'+ $index() + 'address__AddressLine3' }">
+                            <input type="hidden" data-bind="value: itemAddressLine4, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine4', 'id':'addresses_'+ $index() + 'address__AddressLine4' }">
+                            <input type="hidden" data-bind="value: itemPostcode, attr:{'name':'Addresses[' + $index() +'].Address.Postcode', 'id':'addresses_'+ $index() + 'address__Postcode' }">
+                            <input type="hidden" data-bind="value: itemUprn, attr:{'name':'Addresses[' + $index() +'].Address.Uprn', 'id':'addresses_'+ $index() + 'address__Uprn' }">
+                        </td>
+                        <td class="ta-center">
+                            <a href="#" data-bind="click: $root.removeLocationAddress">remove location</a>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
+                @Html.DisplayFor(m => m.LocationAddressesComment, "Comment")
             </div>
 
             <div class="form-group" data-bind="style: {'display': locationAddressesStatus() }">
                 @Html.FormTextAreaFor(m => m.AdditionalLocationInformation, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
+                @Html.DisplayFor(m => m.AdditionalLocationInformationComment, "Comment")
             </div>
             <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
             @Html.RouteLink("Use employer's address", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true})
