--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -20,6 +20,14 @@
     margin-top: 8px;
 }
 
+.remove-button-link{
+    font-size: 14px;
+}
+
+.use-location-button-link{
+    font-size: 14px;
+}
+
 .editable-item {
     position: relative;
     margin: -5px -5px 10px -5px;
@@ -30,6 +38,7 @@
         margin-bottom: 0;
     }
     .edit-comment-link {
+        clear: both;
         @include copy-16;
         display: block;
         margin: .5rem 0;
