--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
@@ -36,5 +36,6 @@
     </section>
     <div class="grid grid-1-2">
         <button type="submit" class="button">Save</button>
+        @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
     </div>
 }
