--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorJS.cshtml
@@ -17,6 +17,7 @@
         </div>
         <div id="location-type-main-location-panel" class="toggle-content blocklabel-content location">
             @Html.FormTextFor(model => model.NumberOfPositions, controlHtmlAttributes: new {type = "text", @class = "form-control-small", @maxlength = "5", size = 12, id= "NumberOfPositionsJS", Name= "NumberOfPositionsJS" }, labelHtmlAttributes: new {@class = "bold-small"})
+            @Html.DisplayFor(m => m.NumberOfPositionsComment, "Comment")
         </div>
     </div>
 </div>
