--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
@@ -28,6 +28,7 @@
                 <input name="NumberOfPositions" class="form-control-small form-control" id="NumberOfPositions" maxlength="5" size="12" type="text"> positions
                 @Html.ValidationMessage("NumberOfPositions")
             </div>
+            @Html.DisplayFor(m => m.NumberOfPositionsComment, "Comment")
         </div>
     </div>
 </noscript>
