--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6337,6 +6337,9 @@ h2 a i.raa-icon-comment {
 .add-location-link {
   margin-top: 8px; }
 
+.no-employers-found {
+  margin-bottom: 20px; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
