No results found in select new employer

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6340,6 +6340,9 @@ h2 a i.raa-icon-comment {
 .no-employers-found {
   margin-bottom: 20px; }
 
+.no-employers-optional-action {
+  margin-top: 20px; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
