--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -216,3 +216,7 @@ table#vacancies-table {
 .no-employers-found{
     margin-bottom:20px;
 }
+
+.no-employers-optional-action{
+    margin-top:20px;
+}
