--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -10,7 +10,6 @@
     var ernSearchSelected = Model.FilterType == EmployerFilterType.Ern ? selected : null;
     var nameAndLocationSearchSelected = Model.FilterType == EmployerFilterType.NameAndLocation ? selected : null;
     var detailsOpen = (!string.IsNullOrWhiteSpace(ernSearchSelected) || !string.IsNullOrWhiteSpace(nameAndLocationSearchSelected)) ? "open" : "";
-
 }
 <div class="grid-wrapper">
     <div class="hgroup">
@@ -24,7 +23,7 @@
     @if ((Model.EmployerResults == null || !Model.EmployerResults.Any()) && (Model.EmployerResultsPage == null || Model.EmployerResultsPage.ResultsCount == 0))
     {
         <div class="no-employers-found">
-            No employers matched your search:
+            <p>No employers matched your search:</p>
             <ul>
                 @if (!string.IsNullOrWhiteSpace(ernSearchSelected))
                 {
@@ -37,7 +36,7 @@
                     <li>try searching by ERN</li>
                 }
             </ul>
-            Alternatively, you might need to create a <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid})">link to the employer</a>
+            <p class="no-employers-optional-action">Alternatively, you might need to create a <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid})">link to the employer</a></p>
         </div>
     }
     
